# libvidcap

./: CMakeLists.txt  Makefile.am  README.md  config.h.in  configure.ac  vidcap.pc.in
cmake/: FindDirectShow.cmake  FindV4L.cmake  FindV4L2.cmake
contrib/win/vs2005/: libvidcap.vcproj
doc/: Doxyfile
examples/: CMakeLists.txt  Makefile.am  simplegrab.c
examples/vidcapTester/: Grabber.cpp  GrabberManager.h  vidcapTester.cpp  vidcapTester.pro
include/vidcap/: converters.h  vidcap.h
src/: CMakeLists.txt  Makefile.am  conv.c  conv.h  conv_to_i420.c  conv_to_rgb.c  conv_to_yuy2.c  double_buffer.c  double_buffer.h  hotlist.c  hotlist.h  logging.c  logging.h  os_funcs.h  sapi.c  sapi.h  sapi_context.h  sapi_dshow.cpp  sapi_qt.c  sapi_v4l.c  sliding_window.c  sliding_window.h  vidcap.c
src/directshow/: CMakeLists.txt  DShowSrcManager.cpp  DShowSrcManager.h  DevMonitor.cpp  DevMonitor.h  DirectShowObject.cpp  DirectShowObject.h  DirectShowSource.cpp  DirectShowSource.h  GraphMonitor.cpp  GraphMonitor.h  SourceStateMachine.cpp  SourceStateMachine.h
src/quicktime/: CMakeLists.txt  gworld.c  gworld.h  sg_manager.c  sg_manager.h  sg_source.c  sg_source.h
trunk/: configure.ac
trunk/contrib/win/vs2005/: libvidcap.vcproj
trunk/examples/: simplegrab.c
trunk/examples/vidcapTester/: GrabberManager.cpp
trunk/include/vidcap/: Makefile.am  converters.h  vidcap.h
trunk/src/: Makefile.am  conv.c  conv.h  conv_to_i420.c  conv_to_rgb.c  conv_to_yuy2.c  double_buffer.c  logging.c  os_funcs.h  sapi.c  sapi.h  sapi_context.h  sapi_dshow.cpp  sapi_qt.c  sapi_v4l.c  vidcap.c
trunk/src/directshow/: DShowSrcManager.cpp  DevMonitor.cpp  DevMonitor.h  DirectShowSource.cpp  DirectShowSource.h  GraphMonitor.cpp  LocklessQueue.h  SourceStateMachine.cpp  SourceStateMachine.h
trunk/src/quicktime/: sg_source.c
